fix: volume appearance is uncontrollable

--- a/assets/app.css
+++ b/assets/app.css
@@ -14,6 +14,10 @@ button::-moz-focus-inner {
   border: 0;
 }
 
+div.hide {
+  display: none;
+}
+
 button {
   color: inherit;
   font-family: inherit;
