--- a/assets/app.css
+++ b/assets/app.css
@@ -14,10 +14,6 @@ button::-moz-focus-inner {
   border: 0;
 }
 
-div.hide {
-  display: none;
-}
-
 button {
   color: inherit;
   font-family: inherit;
@@ -1133,6 +1129,14 @@ button:hover {
   }
 }
 
+.system-article-sub {
+  padding: 0 0 30px 0;
+}
+
+.hide.system-article-sub {
+  display: none;
+}
+
 .system-article-sub-header {
   font-size: 19px;
   padding: 6px 10px;
@@ -1140,7 +1144,7 @@ button:hover {
 }
 
 .system-settings {
-  padding: 0 20px 30px 20px;
+  padding: 0 20px;
   margin: 0;
 }
 
