wait cover img load event

--- a/assets/app.css
+++ b/assets/app.css
@@ -102,6 +102,7 @@ header {
   width: calc(100% + 128px);
   transition: opacity 0.2s 0s ease-out;
   opacity: 1;
+  transform: translate3d(0, 0, 0);
 }
 
 footer {
